[FIX] - card spacing and ie card width

--- a/src/widgets/info-card/info-card.scss
+++ b/src/widgets/info-card/info-card.scss
@@ -1,5 +1,6 @@
 .info-card-container{
   margin-bottom: -24px;
+  width:100%;
   @include lg{
     margin-bottom: -36px;
   }
