--- a/src/widgets/overview-text/overview-text.scss
+++ b/src/widgets/overview-text/overview-text.scss
@@ -31,7 +31,7 @@
             padding-left:15px;
         }
         ul {
-          padding-left: 20px;
+          padding-left: 26px;
           @include font-size($paragraph-font);
           @include line-height($paragraph-line-height);
           font-family: $font-roboto-light;
